[gd_scene load_steps=7 format=3 uid="uid://xp3vmh64fxqo"]

[ext_resource type="Script" path="res://components/PlayerListItem.gd" id="1_1xljq"]
[ext_resource type="StyleBox" uid="uid://c8kmvvtrv0cla" path="res://theme/player_list_item_style_box.tres" id="2_ehg8i"]
[ext_resource type="Texture2D" uid="uid://cdvn1hntrp3ew" path="res://assets/img/icon-no-dalmuti.png" id="3_h2701"]
[ext_resource type="Texture2D" uid="uid://bg33goxdopldo" path="res://assets/img/icon-drag-handle.png" id="3_uamku"]
[ext_resource type="Texture2D" uid="uid://by0bw1hfet6we" path="res://assets/img/button-delete.png" id="4_6nxhf"]
[ext_resource type="Texture2D" uid="uid://bf0laxwwiojas" path="res://assets/img/button-delete-pressed.png" id="5_ipy1d"]

[node name="PlayerListItem" type="Panel"]
custom_minimum_size = Vector2(2.08165e-12, 180)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("2_ehg8i")
script = ExtResource("1_1xljq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(2.08165e-12, 60)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_h2701")

[node name="PlayerNameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Name"
vertical_alignment = 2

[node name="DragHandle" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_uamku")

[node name="DeletePlayerButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_6nxhf")
texture_pressed = ExtResource("5_ipy1d")

[connection signal="pressed" from="MarginContainer/HBoxContainer/DeletePlayerButton" to="." method="_on_delete_player_button_pressed"]
